# rust-fanorona

./: .gitignore  Cargo.toml  README.md  board_to_num.py
rust-by-example/: arrays.rs  format.rs  hello.rs  list.rs  matrix.rs  structs.rs
scripts/: board_to_num.py  num_to_board.py
src/: action.rs  base_board.rs  bitboard.rs  board.rs  capture_type.rs  color.rs  direction.rs  fanorona_board.rs  fanorona_move.rs  fanorona_square.rs  lib.rs  main.rs  move.rs  piece.rs  square.rs
tests/: test.rs
